...
                        android:layout_height="wrap_content"
                        android:textColor="@color/itin_white_text"
                        android:textSize="13sp" />
                </LinearLayout>

                <com.expedia.bookings.widget.TextView
                    android:id="@+id/itin_text_view"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/itin_white_text"
                    android:textSize="13sp"
                    android:layout_marginTop="12dp" />
...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#3A424C"
                        android:padding="16dp">

                        <com.expedia.bookings.widget.TextView
                            android:id="@+id/confirmation_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_above="@+id/email_text"
                            android:textColor="@color/hotel_confirmation_email_text_color"
                            android:textSize="12sp"
...
