...
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <com.expedia.bookings.widget.TextView
                android:id="@+id/card_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CheckoutWidgetPrimaryTextStyle" />

            <com.expedia.bookings.widget.TextView
                android:id="@+id/card_info_expiration"
...
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_generic_card" />

                <com.expedia.bookings.widget.NumberMaskEditText
                    android:id="@+id/edit_creditcard_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/credit_debit_card_hint"
...
