...
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_above="@id/map_view_select_room_container"
        android:background="@drawable/map_shadow" />

    <com.expedia.bookings.hotel.widget.HotelSelectARoomBar
        android:id="@+id/hotel_map_select_a_room_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:elevation="5dp"
        android:paddingTop="3dp"
...
