<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="horizontal" >

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <com.expedia.bookings.widget.TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/calculating_taxes_and_fees"
        android:textSize="18sp"
        android:textColor="@color/hotel_mini_receipt_text" />

</LinearLayout>
